# websub-sub

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: common.rs  feed.rs  main.rs  schema.rs  websub.rs
example/src/cmd/: run.rs  subscribe.rs  unsubscribe.rs
migrations/2020-02-25-121333_create_subscriptions/: up.sql
migrations/2020-02-27-050805_create_active_subscriptions/: down.sql  up.sql
migrations/2020-03-21-051601_create_pending_subscriptions/: down.sql  up.sql
migrations/2020-03-27-165913_create_renewing_subscriptions/: up.sql
migrations/2021-11-19-105115_alter_renewing_subscriptions_primary_key/: down.sql  up.sql
migrations/2021-11-20-084019_drop_pending_subscriptions/: down.sql  up.sql
migrations/2021-11-20-192059_drop_renewing_subscriptions/: down.sql  up.sql
migrations/2021-11-20-222955_drop_active_subscriptions/: down.sql  up.sql
src/: cmd.rs  common.rs  db.rs  feed.rs  hub.rs  lib.rs  main.rs  query.rs  schema.patch  schema.rs  signature.rs  sub.rs  subscriber.rs  util.rs
src/cmd/: run.rs  subscribe.rs  unsubscribe.rs
src/db/: diesel1.rs  diesel2.rs
src/subscriber/: renew_subscriptions.rs  scheduler.rs  service.rs  timer.rs  update.rs
src/subscriber/update/: content.rs
src/util/: backoff.rs  callback_id.rs  collect_body.rs  http_service.rs  r2d2.rs  time.rs
src/util/time/: sleep.rs
