[workspace]
members = [
    ".",
    "example",
]

[package]
name = "websub-sub"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
edition = "2021"
description = "A WebSub/PubSubHubbub subscriber."
repository = "https://github.com/tesaguri/websub-sub.git"
license = "MIT"
keywords = ["websub", "pubsubhubbub"]
categories = ["web-programming"]

[dependencies]
atom = { version = "0.11", package = "atom_syndication" }
auto_enums = "0.7"
base64 = "0.13"
bytes = "1"
cfg-if = "1"
futures = "0.3"
hex = "0.4"
hmac = "0.11"
http = "0.2"
http-body = "0.4.2"
http-serde = "1"
hyper = { version = "0.14", features = ["http1", "http2", "server", "stream"] }
log = "0.4"
mime = "0.3"
pin-project = "1"
rand = "0.8"
rss = "2"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sha-1 = "0.9"
string = { version = "0.2", default-features = false }
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-test = "0.4"
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-service = "0.3"

# `diesel1` feature
diesel = { version = "1.4.3", default-features = false, optional = true }

[features]
diesel1 = ["diesel/r2d2"]

[dev-dependencies]
anyhow = "1"
diesel = { version = "1.4.3", default-features = false, features = ["sqlite"] }
diesel_migrations = { version = "1", default-features = false, features = ["sqlite"] }
hyper = { version = "0.14", features = ["client", "tcp"] }
