[workspace]
members = [
    ".",
    "example",
]

[package]
name = "websub-sub"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
edition = "2021"
description = "A WebSub/PubSubHubbub subscriber."
repository = "https://github.com/tesaguri/websub-sub.git"
license = "MIT"
keywords = ["websub", "pubsubhubbub"]
categories = ["web-programming"]

[dependencies]
base64 = "0.21"
bytes = "1"
cfg-if = "1"
futures = "0.3"
hex = "0.4"
hmac = { version = "0.12", features = ["reset"] }
http = "0.2"
http-body = "0.4.2"
http-serde = "1"
hyper = { version = "0.14", features = ["http1", "http2", "server", "stream"] }
log = "0.4"
memchr = "2"
pin-project = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sha1 = "0.10"
string = { version = "0.3", default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-test = "0.4"
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-service = "0.3"

# `diesel2` feature
diesel = { version = "~2.0", default-features = false, optional = true }

[features]
diesel2 = ["diesel/i-implement-a-third-party-backend-and-opt-into-breaking-changes", "diesel/r2d2"]

[dev-dependencies]
anyhow = "1"
diesel = { version = "~2.0", default-features = false, features = ["sqlite"] }
diesel_migrations = { version = "~2.0", default-features = false, features = ["sqlite"] }
hyper = { version = "0.14", features = ["client", "tcp"] }
