[package]
name = "example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
diesel = { version = "1.4.3", default-features = false, features = ["r2d2", "sqlite"] }
env_logger = "0.10"
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
itoa = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
websub-sub = { path = "..", features = ["diesel1"] }

libsqlite3-sys = { version = ">=0.8.0, <0.23.0", optional = true }

[features]
openssl-vendored = ["hyper-tls/vendored"]
sqlite-bundled = ["libsqlite3-sys/bundled"]
